<resources>
    <string name="app_name">Four Game</string>
    <string name="start_3x3_game">Start 3X3 Game</string>
    <string name="start_5x5_game">Start 5X5 Game</string>
    <string name="start_7x7_game">Start 7X7 Game</string>
    <string name="custom_size">Custom Size</string>
    <string name="restart">Restart</string>
    <string name="quit">Quit</string>
    <string name="game_over">Game Over!</string>
    <string name="your_score">Your score:</string>
    <string name="score">Score:</string>
    <string name="start_9x9_game">Start 9x9 Game</string>
    <string name="start_11x11_game">Start 11X11 Game</string>
    <string name="start_13x13_game">Start 13X13 Game</string>
</resources>
