<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="com.erman.fourgame.home.ui.HomeViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

    <LinearLayout
            android:id="@+id/mainActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
                android:id="@+id/start3x3gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on3x3GameClicked()}"
                android:text="@string/start_3x3_game" />

        <Button
                android:id="@+id/start5x5gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on5x5GameClicked()}"
                android:text="@string/start_5x5_game" />

        <Button
                android:id="@+id/start7x7gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on7x7GameClicked()}"
                android:text="@string/start_7x7_game" />

        <Button
                android:id="@+id/start9x9gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on9x9GameClicked()}"
                android:text="@string/start_9x9_game" />

        <Button
                android:id="@+id/start11x11gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on11x11GameClicked()}"
                android:text="@string/start_11x11_game" />

        <Button
                android:id="@+id/start13x13gameButton"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="8dp"
                android:onClick="@{() -> viewModel.on13x13GameClicked()}"
                android:text="@string/start_13x13_game" />

    </LinearLayout>
</ScrollView></layout>